@@ -1,6 +1,6 @@
-=====================================
+===================================
 Review Board 1.0 RC 3 Release Notes
-=====================================
+===================================
 
 **Release date**: June 13, 2009.
 
